# ai_architecture_study

./: .gitignore  README.md  main.py  pyproject.toml
ddpm/: ddpm_train.ipynb  ldpm_model.py  ldpm_train.ipynb  model.py  model_demo.py  train.ipynb
ddpm/ldpm_weight/: vae.pth  vae_1020epoch.pth  vae_1080epoch.pth  vae_1140epoch.pth  vae_1200epoch.pth  vae_120epoch.pth  vae_1260epoch.pth  vae_1320epoch.pth  vae_1380epoch.pth  vae_1440epoch.pth  vae_1500epoch.pth  vae_1560epoch.pth  vae_1620epoch.pth  vae_1680epoch.pth  vae_1740epoch.pth  vae_1800epoch.pth  vae_180epoch.pth  vae_1860epoch.pth  vae_1920epoch.pth  vae_1980epoch.pth  vae_240epoch.pth  vae_300epoch.pth  vae_30epoch.pth  vae_360epoch.pth  vae_420epoch.pth  vae_480epoch.pth  vae_540epoch.pth  vae_600epoch.pth  vae_60epoch.pth  vae_660epoch.pth  vae_720epoch.pth  vae_780epoch.pth  vae_840epoch.pth  vae_900epoch.pth  vae_90epoch.pth  vae_960epoch.pth
diffusion_policy/: base_cnn_train.ipynb  based_cnn_model.py  model.py  process_data.py
transformer/: model.py  train.ipynb
