[project]
name = "ai-architecture"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "grab>=1.2.0",
    "gymnasium[mujoco]>=1.2.3",
    "numpy>=2.2.6",
    "scipy>=1.15.3",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
    "tqdm>=4.67.3",
]
